<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ThanhToanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layoutTT_btnTroVe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvtrove"
            android:textSize="@dimen/tieudesize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:paddingRight="@dimen/tieude"
            android:text="@string/tvthanhtoan"
            android:textColor="@color/design_default_color_error"
            android:textSize="@dimen/tieudesize"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="@dimen/le">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvmadonhang"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvMaDonHang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvhoten"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvHoTen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvsodienthoai"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvSoDienThoai"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Email:"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Địa chỉ:"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvDiaChi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <ImageButton
                android:id="@+id/layoutTT_imgbtnDiaChi"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_location_on_24" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/le"
        android:layout_weight="3"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layoutTT_rvDanhSach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/le"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/le">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/tvhinhthucgiao"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <Spinner
                android:id="@+id/layoutTT_spnHinhThucGiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/tvmagiamgia"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvMaGiamGia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/tien"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/layoutTT_btnChonMa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/le"
                android:layout_weight="1"
                android:text="@string/btnchonma"
                android:textStyle="bold"
                android:backgroundTint="@color/clickgiohang"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/tvphuongthucthanhtoan"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <Spinner
                android:id="@+id/layoutTT_spnPhuongThucThanhToan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvtongtienhang"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvTongTien"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvphivanchuyen"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvPhiVanChuyen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvgiamgia"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvGiamGia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvtongtienthanhtoan"
                android:textColor="@color/tongtien"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutTT_tvTongTienThanhToan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/tongtien"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/le"
        android:paddingRight="@dimen/le">

        <Button
            android:id="@+id/layoutTT_btnHuy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Hủy"
            android:textSize="@dimen/textsize"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/le"/>

        <Button
            android:id="@+id/layoutTT_btnDatHang"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="Đặt hàng"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>