<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChiTietTheoDoiDonHangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layoutCTTDDH_btnTroVe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvtrove"
            android:textSize="@dimen/tieudesize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:paddingRight="@dimen/tieude"
            android:text="Chi Tiết Đơn Hàng"
            android:textColor="@color/design_default_color_error"
            android:textSize="@dimen/tieudesize"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="@dimen/le">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvmadonhang"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvMaDonHang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Nhân viên giao:"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvTenNhanVienGiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Thời gian đặt hàng:"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvThoiGianLap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Thời gian dự kiến giao:"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvThoiGianGiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/le"
        android:layout_weight="3"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layoutCTTDDH_rvDanhSach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/le"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/le">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/tvhinhthucgiao"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvHinhThucGiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:gravity="center|left"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/tvphuongthucthanhtoan"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvPhuongThucThanhToan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|left"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvtongtienhang"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvTongTien"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvphivanchuyen"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvPhiVanChuyen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvgiamgia"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvGiamGia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/tvtongtienthanhtoan"
                android:textColor="@color/tongtien"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/layoutCTTDDH_tvTongTienThanhToan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/tongtien"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCTTDDH_llButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:paddingLeft="@dimen/le"
        android:paddingRight="@dimen/le"
        android:visibility="gone">

        <Button
            android:id="@+id/layoutCTTDDH_btnXacNhanThanhToanOnline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/le"
            android:layout_weight="1"
            android:text="Xác nhận đã thanh toán online"
            android:textSize="@dimen/textsize"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/layoutCTTDDH_btnHuyDonHang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/le"
            android:layout_weight="1"
            android:text="Hủy đơn hàng"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/layoutCTTDDH_btnXacNhanHoanTien"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/le"
            android:layout_weight="1"
            android:text="Xác nhận đã nhận hoàn tiền"
            android:textSize="@dimen/textsize"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>